@@ -42,6 +42,7 @@ Mantis ChangeLog
  * Languages: Synchronised localisation files with English localisation.
  * Fix: Part of filenames with '-'s were being cut off.
  * Enh #3240: Show last login date in the main page.
+ * Enh #3242: Show bugnote add form before bugnotes to minimize the scroll needed to add a note.
 
 2003.03.22  -  0.18.0a4
 
